<resources>
    <string name="app_name">arundayaTour</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_import">Cart</string>
    <string name="menu_gallery">Order</string>
    <string name="menu_search">Cari</string>
    <string name="menu_category">Kategori</string>
    <string name="menu_settings">Pengaturan</string>
    <string name="menu_logout">Keluar</string>

    <string name="home_second">Home Second</string>
</resources>
