<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/menu_import"
            android:iconTint="@color/whiteColor"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/menu_gallery"
            android:iconTint="@color/whiteColor"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/menu_search"
            android:iconTint="@color/whiteColor"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:title="@string/menu_category"
            android:iconTint="@color/whiteColor"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting"
            android:title="@string/menu_settings"
            android:iconTint="@color/whiteColor"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout"
            android:iconTint="@color/whiteColor"/>
    </group>
</menu>
